--- a/B9/9/goldi.css
+++ b/B9/9/goldi.css
@@ -26,7 +26,7 @@ Szín megadási módok:	p	{background-color:yellow;}
 						p	{background-color:#ff6347;}
 */
 /*A háttérszín beállítása rózsaszínre*/
-html {background-color: Purple;}
+html {background-color: Navy;}
 
 /* A dokumentumtörzs megjelenésének beállítása */
 body {
@@ -52,7 +52,7 @@ body {
  
 /* felsoroláslisták megjelenésének beállítása */
 ul {
-	background-color:Olive;	/* türkíz háttérszín*/
+	background-color:Silver;	/* türkíz háttérszín*/
 	margin:0;				/* margó lenullázása */ 
 	padding:30px;			/* belső kitöltés */
 }
@@ -68,7 +68,7 @@ li {
 /* 1-es címsorok megjelenésének beállítása */
 h1 {
 	color:Black;						/* fehér szövegszín */
-	border-bottom:10px solid darkred;	/*vastag, sötétpiros alsó szegély*/
+	border-bottom:10px Teal;	/*vastag, sötétpiros alsó szegély*/
 	background-color:White;				/* fekete háttérszín*/
 	padding:10px;						/* belső kitöltés */
 	margin:0;							/* margó lenullázása */ 
@@ -104,7 +104,7 @@ figure {
 	margin-left:auto;			/* bal és jobb margó 'auto' beállítása középre igazítást jelent */
 	margin-right:auto;
 	margin-bottom:30px;			/* alsó margó beállítása */
-	background-color:darkred;	/* sötétvörös háttérszín beállítása*/
+	background-color:Teal;	/* sötétvörös háttérszín beállítása*/
 	transform:rotate(-2deg);	/* elforgatás 2 fokkal*/
 	border-radius:30px;			/* szegély lekerekítése*/
 	}
@@ -113,7 +113,7 @@ figure {
 img {
 	width:45%; 					/* szélesség beállítása */
 	height:auto;				/* magasság beállítása */
-	border:4px solid white;		/* szegély legyen vastagabb, fehér*/
+	border:4px black;		/* szegély legyen vastagabb, fehér*/
 	border-radius:60px;			/* szegély lekerekítése*/
 	margin-right:10px;			/*jobb margó	*/
 			}	
@@ -151,7 +151,7 @@ td,th {
 
 /* Fejléc cella beállítása */
 th {
-	background-color:darkred;   /* sötétvörös háttér*/
+	background-color:Navy;   /* sötétvörös háttér*/
 	color:white;				/* fehér szövegszín */
 }
 
@@ -160,7 +160,7 @@ tr:nth-child(odd) {background-color:lightgray;}  /* világosszürke háttér*/
 
 /*A táblázat felirat megjelenése*/
 caption {
-	background-color:black;	/* fekete háttérszín*/
+	background-color:Silver;	/* fekete háttérszín*/
 	color:white;			/* fehér szövegszín*/
 	padding:10px;			/* belső kitöltés*/
 	}
